# exonum-cryptoowls

./: .cspell.json  .gitignore  .markdownlintrc  .travis.yml  Cargo.toml  README.en.md  README.md  exonum-dictionary.txt
examples/: serialize.rs
frontend/: .gitignore  Gruntfile.js  index.html  package-lock.json  package.json
frontend/proto/: helpers.proto
frontend/src/: App.vue  app.js
frontend/src/components/: AuctionList.vue  Countdown.vue  Modal.vue  Navbar.vue  Owl.vue  OwlIcon.vue  OwlList.vue  UserSummary.vue
frontend/src/pages/: Auction.vue  Auctions.vue  Auth.vue  Block.vue  Blockchain.vue  Dashboard.vue  Owl.vue  Owls.vue  Transaction.vue  User.vue  Users.vue
frontend/src/plugins/: blockchain.js  moment.js  storage.js  svg.js
frontend/src/router/: index.js
frontend/src/store/: index.js
src/: lib.rs  main.rs  schema.rs
src/proto/: data_layout.proto  mod.rs  transactions.proto
tests/: api.rs  transactions.rs
