[package]
name = "exonum-cryptoowls"
version = "0.0.0"
authors = ["The Exonum Team <exonum@bitfury.com>"]
homepage = "https://exonum.com"
repository = "https://github.com/exonum/exonum-cryptoowls"
readme = "README.md"
license = "Apache-2.0"
publish = false

[dependencies]
display_derive = "0.0.0"
exonum = "0.9.0"
exonum-time = "0.9.0"
exonum-configuration = "0.9.0"
failure = "0.1.1"
failure_derive = "0.1.1"
log = "0.4"
rand = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
byteorder = "1.2"
enum-primitive-derive = "0.1.2"
num-traits = "0.2.5"
chrono = "0.4.4"

[dev-dependencies]
exonum-testkit = "0.9.0"
pretty_assertions = "0.5.1"
