[package]
name = "exonum-cryptoowls"
version = "0.10.0"
edition = "2018"
authors = ["The Exonum Team <exonum@bitfury.com>"]
homepage = "https://exonum.com"
repository = "https://github.com/exonum/exonum-cryptoowls"
readme = "README.md"
license = "Apache-2.0"
publish = false

[dependencies]
byteorder = "1.2"
chrono = "0.4.6"
# display_derive = "0.0.0"
enum-primitive-derive = "0.1.2"
exonum = "0.10.0"
exonum-configuration = "0.10.0"
exonum-time = "0.10.0"
exonum-derive = "0.10.0"
failure = "0.1"
protobuf = "2.2"
failure_derive = "0.1"
log = "0.4"
num-traits = "0.2"
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
exonum-testkit = "0.10.0"

[build-dependencies]
exonum-build = "0.10.0"